<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- item ids intentionally match the nav graph ids they open (NavigationUI convention) -->

    <item
        android:id="@+id/home_nav_graph"
        android:icon="@drawable/ic_home_outline"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/search_nav_graph"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/favorites_nav_graph"
        android:icon="@drawable/ic_heart_outline"
        android:title="@string/nav_favorites" />

    <item
        android:id="@+id/profile_nav_graph"
        android:icon="@drawable/ic_person_outline"
        android:title="@string/nav_profile" />

</menu>
